Changes in release 0.26:
* Argument passed to "cadaver" must now be an absolute URI.
 - fail for various parsing cases/guesses previously allowed
* Rewrite of path and character set handling for non-UTF-8 locales:
 - URI paths are translated to/from the native character encoding
 - nl_langinfo() used to detect UTF-8 locale support
 - full relative path resolution is now done for paths
 - "get" now uses a locale-native default filename (issue #33)
* Fix memory leak in remote filename completion.
* Various command fixes
 - propget: output improved for clarity.
 - rmcol: lock handling on error path fixed.
 - less: catch errors from pager command.

Changes in release 0.25:
* Support bundled neon build again.

Changes in release 0.24:
* Modernize configure scripts (Hugh McMaster)
 - fixing cross-compilation support
* Various spelling fixes (Hugh McMaster)
* Cosmetic fix for "cat" output
* Bundled neon support is not supported
* Support building against neon up to 0.32

Changes in release 0.23.3:
* Update to neon 0.29.1.

Changes in release 0.23.2:
* Fix "make install" with NLS builds.

Changes in release 0.23.1:
* Update to neon 0.28.0.

Changes in release 0.23.0:
* Update to neon 0.27.0; drop support for older versions of neon.
* Fix "search contains" (thanks to Jack Bates)
* Add DESTDIR support to "make install" (Dr Volker Zell)

Changes in release 0.22.5:
* Update to neon 0.26.3:
 - fix security issue in URI parser, CVE-2007-0157
* Document netrc support in man page (Sebastian Harl)

Changes in release 0.22.4:
* Update to neon 0.26.2 (thanks to Peter O'Gorman).
* Fixes for OS/2 EMX (Andrew Belov).

Changes in release 0.22.3:
* Update to neon 0.25.4:
 - fix support for handling multiple authentication challenges
 - add support for the Negotiate (GSSAPI/Kerberos) protocol
* Enable i18n support again.

Changes in release 0.22.2:
* Fix build issues on AIX (Tony Bennett).
* Fix DeltaV commands on locked resources.
* Update to neon 0.24.6: